--- a/allora-node/docker-compose-reputer.yaml
+++ b/allora-node/docker-compose-reputer.yaml
@@ -7,7 +7,7 @@ services:
         environment:
             - DATABASE_PATH=/app/data/prices.db
             - API_PORT=8001
-            - ALLORA_VALIDATOR_API_URL=https://allora-rpc.testnet.allora.network/
+            - ALLORA_VALIDATOR_API_URL=https://rpc-allora.mkv.one/
             # - ALLORA_VALIDATOR_API_URL=https://localhost:1317/
             - TOKEN=ETH
             - TOKEN_CG_ID=ethereum
