--- a/allora-node/data/config/prometheus.yml
+++ b/allora-node/data/config/prometheus.yml
@@ -1,4 +1,4 @@
 scrape_configs:
-  - job_name: 'offchain_node'
-    static_configs:
-      - targets: ['node:2112']
+    - job_name: 'offchain_node'
+      static_configs:
+          - targets: ['allora-worker:2112']
