--- a/allora-node/config.json
+++ b/allora-node/config.json
@@ -7,7 +7,7 @@
         "gasAdjustment": 1.5,
         "gasPrices": 0.08,
         "maxFees": 200000,
-        "nodeRpc": "https://rpc-allora.mkv.one/",
+        "nodeRpc": "https://allora-rpc.testnet.allora.network",
         "maxRetries": 5,
         "retryDelay": 3,
         "accountSequenceRetryDelay": 5,
