--- a/allora-node/config.json
+++ b/allora-node/config.json
@@ -4,8 +4,9 @@
         "addressRestoreMnemonic": "xxx_your_mnemonic_here_xxx",
         "alloraHomeDir": "",
         "gas": "auto",
-        "gasAdjustment": 1.5,
-        "gasPrices": 0.08,
+        "gasAdjustment": 2.0,
+        "gasPrices": 0.1,
+        "maxFees": 250000,
         "nodeRpc": "https://rpc-allora.mkv.one/",
         "maxRetries": 5,
         "retryDelay": 3,
