--- a/allora-node/config.json
+++ b/allora-node/config.json
@@ -7,7 +7,7 @@
         "gasAdjustment": 2.0,
         "gasPrices": 0.1,
         "maxFees": 250000,
-        "nodeRpc": "https://rpc-allora.mkv.one/",
+        "nodeRpc": "https://allora-rpc.testnet.allora.network/",
         "maxRetries": 5,
         "retryDelay": 3,
         "accountSequenceRetryDelay": 5,
@@ -17,7 +17,7 @@
         {
             "topicId": 1,
             "inferenceEntrypointName": "api-worker-reputer",
-            "loopSeconds": 10,
+            "loopSeconds": 8,
             "parameters": {
                 "InferenceEndpoint": "http://source-01:8001/inference/{Token}",
                 "Token": "ETH"
@@ -26,7 +26,7 @@
         {
             "topicId": 3,
             "inferenceEntrypointName": "api-worker-reputer",
-            "loopSeconds": 10,
+            "loopSeconds": 12,
             "parameters": {
                 "InferenceEndpoint": "http://source-01:8001/inference/{Token}",
                 "Token": "BTC"
@@ -35,7 +35,7 @@
         {
             "topicId": 5,
             "inferenceEntrypointName": "api-worker-reputer",
-            "loopSeconds": 10,
+            "loopSeconds": 14,
             "parameters": {
                 "InferenceEndpoint": "http://source-01:8001/inference/{Token}",
                 "Token": "SOL"
@@ -53,7 +53,7 @@
         {
             "topicId": 7,
             "inferenceEntrypointName": "api-worker-reputer",
-            "loopSeconds": 10,
+            "loopSeconds": 16,
             "parameters": {
                 "InferenceEndpoint": "http://source-02:8002/inference/{Token}",
                 "Token": "ETH"
@@ -62,7 +62,7 @@
         {
             "topicId": 8,
             "inferenceEntrypointName": "api-worker-reputer",
-            "loopSeconds": 10,
+            "loopSeconds": 18,
             "parameters": {
                 "InferenceEndpoint": "http://source-02:8002/inference/{Token}",
                 "Token": "BNB"
@@ -71,7 +71,7 @@
         {
             "topicId": 9,
             "inferenceEntrypointName": "api-worker-reputer",
-            "loopSeconds": 10,
+            "loopSeconds": 20,
             "parameters": {
                 "InferenceEndpoint": "http://source-02:8002/inference/{Token}",
                 "Token": "ARB"
