--- a/allora-node/config.json
+++ b/allora-node/config.json
@@ -5,13 +5,15 @@
         "alloraHomeDir": "",
         "gas": "auto",
         "gasAdjustment": 2.0,
-        "gasPrices": 0.1,
-        "maxFees": 250000,
+        "gasPrices": 10,
+        "maxFees": 25000000,
         "nodeRpc": "https://rpc-allora.mkv.one/",
         "maxRetries": 5,
         "retryDelay": 3,
         "accountSequenceRetryDelay": 5,
-        "submitTx": true
+        "submitTx": true,
+        "blockDurationEstimated": 10,
+        "windowCorrectionFactor": 0.8
     },
     "worker": [
         {
