add worker topic

--- a/allora-node/config.json
+++ b/allora-node/config.json
@@ -24,7 +24,25 @@
             }
         },
         {
+            "topicId": 2,
+            "inferenceEntrypointName": "api-worker-reputer",
+            "loopSeconds": 5,
+            "parameters": {
+                "InferenceEndpoint": "http://source-03:8003/inference/{Token}",
+                "Token": "ETH"
+            }
+        },
+        {
             "topicId": 3,
+            "inferenceEntrypointName": "api-worker-reputer",
+            "loopSeconds": 5,
+            "parameters": {
+                "InferenceEndpoint": "http://source-01:8001/inference/{Token}",
+                "Token": "BTC"
+            }
+        },
+        {
+            "topicId": 4,
             "inferenceEntrypointName": "api-worker-reputer",
             "loopSeconds": 5,
             "parameters": {
@@ -42,12 +60,12 @@
             }
         },
         {
-            "topicId": 2,
+            "topicId": 6,
             "inferenceEntrypointName": "api-worker-reputer",
             "loopSeconds": 5,
             "parameters": {
-                "InferenceEndpoint": "http://source-03:8003/inference/{Token}",
-                "Token": "ETH"
+                "InferenceEndpoint": "http://source-01:8001/inference/{Token}",
+                "Token": "SOL"
             }
         },
         {
@@ -75,6 +93,42 @@
             "parameters": {
                 "InferenceEndpoint": "http://source-02:8002/inference/{Token}",
                 "Token": "ARB"
+            }
+        },
+        {
+            "topicId": 13,
+            "inferenceEntrypointName": "api-worker-reputer",
+            "loopSeconds": 5,
+            "parameters": {
+                "InferenceEndpoint": "http://source-01:8001/inference/{Token}",
+                "Token": "ETH"
+            }
+        },
+        {
+            "topicId": 14,
+            "inferenceEntrypointName": "api-worker-reputer",
+            "loopSeconds": 5,
+            "parameters": {
+                "InferenceEndpoint": "http://source-01:8001/inference/{Token}",
+                "Token": "BTC"
+            }
+        },
+        {
+            "topicId": 15,
+            "inferenceEntrypointName": "api-worker-reputer",
+            "loopSeconds": 5,
+            "parameters": {
+                "InferenceEndpoint": "http://source-01:8001/inference/{Token}",
+                "Token": "ETH"
+            }
+        },
+        {
+            "topicId": 16,
+            "inferenceEntrypointName": "api-worker-reputer",
+            "loopSeconds": 5,
+            "parameters": {
+                "InferenceEndpoint": "http://source-01:8001/inference/{Token}",
+                "Token": "BTC"
             }
         }
     ]
