--- a/allora-node/config.json
+++ b/allora-node/config.json
@@ -4,15 +4,16 @@
         "addressRestoreMnemonic": "xxx_your_mnemonic_here_xxx",
         "alloraHomeDir": "",
         "gas": "auto",
-        "gasAdjustment": 2.0,
-        "gasPrices": 10,
-        "maxFees": 25000000,
+        "gasAdjustment": 3.0,
+        "gasPrices": "11",
+        "gasPriceUpdateInterval": 60,
+        "maxFees": 28000000,
         "nodeRpc": "https://rpc-allora.mkv.one/",
         "maxRetries": 5,
         "retryDelay": 3,
         "accountSequenceRetryDelay": 5,
         "submitTx": true,
-        "blockDurationEstimated": 10,
+        "blockDurationEstimated": 5,
         "windowCorrectionFactor": 0.8
     },
     "worker": [
